# BCI-sift

./: .gitignore  LICENSE  README.md  pyproject.toml  ray_paralleisation_test.py
dataset/: Dataset.py  Epochs.py  Events.py  utils.py
examples/: advanced_bcisift_example.py  advanced_bcisift_example_config.yml  minimal_RFE_example.py
experiments/finger_classification/: aux.py  config.py  main.py
optimizer/: Base_Optimizer.py  ContiguousExhaustiveSearch.py  EvolutionaryAlgorithms.py  ParticleSwarmOptimization.py  PerturbativeSearch.py  RandomSearch.py  RecursiveFeatureElimination.py  SimulatedAnnealing.py  SpatialExhaustiveSearch.py  SpatialStochasticHillClimbing.py  StochasticHillClimbing.py  _Base_Optimizer.py  _Base_RFE.py  _Base_SES.py  _Base_SSHC.py  __init__.py  _utils.py  utils.py
optimizer/backend/: __init__.py  _backend.py  _ray.py  _trainer.py
src/: aux.py
src/dataset/: Dataset.py
src/optimizer/: Base_Optimizer.py  EvolutionaryAlgorithms.py  ParticleSwarmOptimization.py  RandomSearch.py  RecursiveFeatureElimination.py  SimulatedAnnealing.py  SpatialExhaustiveSearch.py  SpatialStochasticHillClimbing.py  _Base_Optimizer.py  _Base_RFE.py  _Base_SES.py  _Base_SSHC.py  __init__.py
src/optimizer/backend/: _backend.py
src/utils/: custom_estimator.py  grid_plots.py  hp_tune.py
utils/: grid_plots.py  hp_tune.py
