[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BCI-sift"
version = "0.1.0"
description = "An automated feature selection toolbox for Brain Computer Interface applications."
readme = "README.md"
requires-python = ">=3.10.13"
license = { file = "LICENSE" }
authors = [
  { name = "Elena Offenberg" },
  { name = "Dirk Keller" }
]
keywords = [
  "ECoG",
  "brain-computer interface",
  "feature selection",
  "machine learning",
  "neuroinformatics"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Medical Science Apps."
]
dependencies = [
  "numpy==1.24.4",
  "pandas==2.3.3",
  "scikit-learn==1.3.2",
  "ray[tune]==2.55.1",
  "deap==1.4.4",
  "numba==0.65.1",
  "tqdm==4.68.2",
  "pyswarms==1.3.0"
]

[project.optional-dependencies]
dev = [
  "black>=24.0"
]

[project.urls]
Repository = "https://github.com/UMCU-RIBS/BCI-sift"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["opt*"]

[tool.black]
line-length = 88
target-version = ["py310"]